# DiffSight

./: CMakeLists.txt  README.md  main.cpp  res.qrc  robot.cpp  robot.h  robotdrawing.h  tcpserver.h
dox/: Doxyfile  README.md
dox/html/: _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  annotated.html  b845c5974e3f9828bed1b85863ffe0a163f75ab6123ccd71ee30be53a21dd15a_8d.html  b845c5974e3f9828bed1b85863ffe0a163f75ab6123ccd71ee30be53a21dd15a_8d_source.html  charts_8cpp.html  charts_8cpp__incl.dot  charts_8cpp_source.html  charts_8h.html  charts_8h__dep__incl.dot  charts_8h__incl.dot  charts_8h_source.html  class_control_keys-members.html  class_control_keys.html  class_control_keys__inherit__graph.dot  class_control_keys_a1073fe090ad2f9f6b516d53c4b45abf5_cgraph.dot  class_control_keys_a1073fe090ad2f9f6b516d53c4b45abf5_icgraph.dot  class_control_keys_a12eed5d2d8c9b0da0f974c0c52c3c6ee_cgraph.dot  class_control_keys_a12eed5d2d8c9b0da0f974c0c52c3c6ee_icgraph.dot  class_control_keys_a1ba688f6f43431203bb91cbdc68a595c_icgraph.dot  class_control_keys_a30a695329fa1e9096607d3460b12e13a_cgraph.dot  class_control_keys_a40c02de182bf4340c0176e55ff9dca79_icgraph.dot  class_control_keys_a5987bc5c114a8c4add9a5c7f3b6fb045_cgraph.dot  class_control_keys_a5987bc5c114a8c4add9a5c7f3b6fb045_icgraph.dot  class_control_keys_a6f9479be6330824c8b0f9ccfc3438fe3_cgraph.dot  class_control_keys_a6f9479be6330824c8b0f9ccfc3438fe3_icgraph.dot  class_control_keys_a7e684a68327098ae83b6b88384f9f99f_icgraph.dot  class_control_keys_ac089aa03b050c280f0645a938b4a2d64_icgraph.dot  class_control_keys_ac0fa222d3fd6ccbc1c8dc39e3a7b6c87_icgraph.dot  class_control_keys_aeffb522c933d93e1beb9735404752f95_cgraph.dot  class_control_keys_aeffb522c933d93e1beb9735404752f95_icgraph.dot  class_cross_item-members.html  class_cross_item.html  class_cross_item__coll__graph.dot  class_data_server-members.html  class_data_server.html  class_data_server__coll__graph.dot  class_data_server__inherit__graph.dot  class_data_server_a1cdc7a1ab7799d2480de8d47b44529c4_icgraph.dot  class_data_server_a268dc5b8cd61803572309c804bc5ea7b_cgraph.dot  (+329 more)
dox/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_3.js  defines_6.js  defines_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_1.js  (+31 more)
inc/: charts.h  controlKeys.h  graphicsUtils.h  graphicsview.h  languages.h  ledwidget.h  mainwindow.h  mainwindow.ui  robot.h  robotdrawing.h  robotviz.h  setDestination.h  stopButton.h  tcpserver.h
src/: charts.cpp  controlKeys.cpp  graphicsUtils.cpp  graphicsview.cpp  languages.cpp  ledwidget.cpp  mainwindow.cpp  robot.cpp  robotdrawing.cpp  robotviz.cpp  setDestination.cpp  stopButton.cpp  tcpserver.cpp
ts/: app_en.ts  app_pl.ts  app_sl.ts
